--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,15 @@ img{
     border: 4px solid white;
     
 }
+.navbar {
+    position: sticky;
+    top: 0;
+    overflow: hidden;}
+
+    div.fixed {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        width: 300px;
+        border: 3px solid #fbeef8;
+      }
