--- a/styles.css
+++ b/styles.css
@@ -50,11 +50,7 @@ h1{
     color:rgb(225, 175, 198);
 }
 
-img {
-    width: 430px;
-    padding: 4px;
-    border: 4px solid white;
-    border-radius: 24px;
+
     
 }
 .navbar {
@@ -92,4 +88,10 @@ p:hover, h1:hover, a:hover {
   }
 .contacts{
         text-align: center;
+}
+
+.pink a{
+    color: rgb(225, 175, 198);
+    text-decoration: none;
+    font-family: "DM Serif Text", serif;
 }
