--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,6 @@ h1{
 }
 
 
-    
-}
 .navbar {
     position: sticky;
     top: 0;
@@ -67,13 +65,12 @@ h1{
       }
 
  
-.no_img{
-    width: 430px;
-    padding: 4px;
-    border: 4px solid white;
-    border-radius: 24px;
+      .no_img{
+        width: 390px;
+        padding: 4px;
+        border: 4px solid white;
+        border-radius: 24px;}
 
-}
 button:hover{
     font-size: medium;
     background-color: #fbeef8;
@@ -83,8 +80,8 @@ button:active{
     font-size: medium;
     background-color: #f0cbe2;
 }
-p:hover, h1:hover, a:hover, h2:hover, li:hover :hover {
-    background-color:#f9eef5;
+p:hover, h1:hover, a:hover, h2:hover, li:hover {
+    background-color:rgb(249, 238, 245);
   }
 .contacts{
         text-align: center;
@@ -103,3 +100,16 @@ p:hover, h1:hover, a:hover, h2:hover, li:hover :hover {
     margin-right: auto;
     
   }
+
+  @media screen and (max-width: 600px;) {
+
+
+    .no_img{
+        width: 100px%;
+        padding: 4px;
+        border: 4px solid white;
+        border-radius: 24px;
+    
+
+
+}
