--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&display=swap');
 
+
 body {
     background-color: rgb(58, 51, 91);
     color: rgb(225, 175, 198);
     font-family: "DM Serif Text", serif;
-    
+   
 }
+
 
 h1{
     text-align: center;
 }
+
 
 .navbar ul{
     list-style-type: none;
@@ -19,6 +22,7 @@ h1{
     overflow: hidden;
 }
 
+
 .navbar a{
     color: rgb(240, 227, 201);
     text-decoration: none;
@@ -27,6 +31,7 @@ h1{
     text-align: center;
 }
 
+
 .navbar a:hover{
     background-color: rgb(190, 100, 156);
 }
@@ -34,28 +39,36 @@ h1{
     float: left;
 }
 
+
 .text-white {
     color: rgb(255, 255, 255);
 }
+
 
 #heading {
     color:rgb(225, 175, 198);
 }
 
+
 .text-pink{
     border-color:rgb(190, 100, 156);
 
+
 }
+
 
 .color-pink{
     color:rgb(225, 175, 198);
 }
 
 
+
+
 .navbar {
     position: sticky;
     top: 0;
     overflow: hidden;}
+
 
     div.fixed {
         position: fixed;
@@ -65,6 +78,7 @@ h1{
         border: 3px solid #fbeef8;
       }
 
+
  
       .no_img{
         width: 340px;
@@ -72,10 +86,12 @@ h1{
         border: 4px solid white;
         border-radius: 24px;}
 
+
 button:hover{
     font-size: medium;
     background-color: #fbeef8;
 }
+
 
 button:active{
     font-size: medium;
@@ -88,6 +104,7 @@ p:hover, h1:hover, a:hover, h2:hover, li:hover {
         text-align: center;
 }
 
+
 .pink a{
     color: rgb(225, 175, 198);
     text-decoration: none;
@@ -95,19 +112,53 @@ p:hover, h1:hover, a:hover, h2:hover, li:hover {
 }
 
 
+
+
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    
+   
   }
+
+
+
+
+
+
+   .border-link {
+        color: #ff69b4;
+        padding: 10px 20px;
+        border: 3px solid #ff69b4;
+        border-radius: 15px;
+        text-decoration: none;
+        font-size: 18px;
+        font-family: 'Arial', sans-serif;
+        display: inline-block;
+        transition: all 0.3s ease;
+    }
+
+
+    .border-link:hover {
+        background-color: #ff69b4;
+        color: white;
+    }
+
 
   @media screen and (max-width: 600px;) {
 
 
-    
-    
+
+
+   
+   
+
+
 
 
 }
+
+
+
+
 
