--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,26 @@ p:hover, h1:hover, a:hover, h2:hover, li:hover {
     
   }
 
+
+.border-link {
+        color: #ff69b4;
+        padding: 10px 20px;
+        border: 3px solid #ff69b4;
+        border-radius: 15px;
+        text-decoration: none;
+        font-size: 18px;
+        font-family: 'Arial', sans-serif;
+        display: inline-block;
+        transition: all 0.3s ease;
+    }
+
+
+    .border-link:hover {
+        background-color: #ff69b4;
+        color: white;
+    }
+
+
   @media screen and (max-width: 600px;) {
 
 
